[package]
name = "aepi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp="0.3.4"
tokio = { version = "1.27.0", features = ["full"] }
mongodb="2.4.0"
futures="0.3.28"
serde="1.0.159"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]